# apt-legal-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  pyproject.toml
.ai/: portal-instructions-enforcement-date-fix.md
.ai/sessions/: session-2026-04-13-0001.md  session-2026-04-13-0002.md  session-2026-04-14-0001.md  session-2026-04-14-0002.md  session-2026-04-14-0003.md  session-2026-04-15-0001.md  session-2026-04-16-0001.md  session-2026-04-24-0001.md  session-2026-04-24-0002.md
docs/: 01_implementation_plan.md  02_mcp_server_codex_spec.md  03_vertical_agent_codex_spec.md
scripts/: probe_new_targets.py  run_stdio.py  verify_law_api.py  verify_tools.py  verify_via_claude.py
src/apt_legal_mcp/: config.py  server.py
src/apt_legal_mcp/clients/: law_api.py
src/apt_legal_mcp/models/: schemas.py
src/apt_legal_mcp/prompts/: definitions.py
src/apt_legal_mcp/resources/: dispute_types.py
src/apt_legal_mcp/tools/: _common.py  compare_laws.py  get_law_article.py  get_precedent_detail.py  search_interpretation.py  search_law.py  search_precedent.py
src/kor_legal_mcp/: config.py  server.py
src/kor_legal_mcp/cache/: memory_cache.py
src/kor_legal_mcp/clients/: article_number.py  law_api.py
src/kor_legal_mcp/models/: schemas.py
src/kor_legal_mcp/prompts/: definitions.py
src/kor_legal_mcp/tools/: _common.py  compare_laws.py  get_admrule_detail.py  get_constitutional_decision_detail.py  get_interpretation_detail.py  get_law_article.py  get_ordinance_detail.py  get_precedent_detail.py  get_treaty_detail.py  search_admrule.py  search_constitutional_decision.py  search_interpretation.py  search_law.py  search_ordinance.py  search_precedent.py  search_treaty.py
tests/: test_article_number.py  test_common.py  test_law_match.py  test_law_metadata.py  test_memory_cache.py  test_search_law_fallback.py
